# working_hours_manager

./: .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
docs/: ARCHITECTURE.md  README.md  editor.md  frontend.md  index.md  pending-corrections-feature.md
tests/: conftest.py  test_admin.py  test_calculator.py  test_main.py  test_models.py  test_parser.py  test_reporter.py  test_server.py  test_watcher.py
working_hours/: __main__.py  auth.py  parser.py  server.py  watcher.py
working_hours/application/: correction_service.py  file_service.py  report_service.py  user_service.py
working_hours/blueprints/: admin_bp.py  auth_bp.py  editor_bp.py
working_hours/domain/: calculator.py  models.py  validators.py
working_hours/infrastructure/: data.py  reporter.py  settings.py
working_hours/presentation/: auth.py  server.py
working_hours/presentation/blueprints/: admin_bp.py  auth_bp.py  editor_bp.py  setup_bp.py
working_hours/static/css/: admin.css  editor.css  login.css  report.css  report_index.css
working_hours/static/scss/: _base.scss  _variables.scss  admin.scss  editor.scss  login.scss  report.scss  report_index.scss
working_hours/templates/: admin.html  editor.html  login.html  report.html  report_index.html  setup.html
working_hours/templates/admin/: _admins.html  _datafiles.html  _employees.html  _pending.html
